# claudectl

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_SESSIONS.md  COMPLETION_SETUP.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INSTALLATION.md  LICENSE  README.md  SESSION_NAVIGATION.md  SESSION_PERSISTENCE.md  biome.json  build.rs  clippy.toml  demo-output.js  package-lock.json  package.json  rustfmt.toml  setup-completion.md  test-multistep.js  test-output.js  test_session_isolation.md  tsconfig.json  vitest.config.ts
.github/: DEPLOYMENT.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  cli-test.yml  codeql.yml  release.yml
completions/: _claudectl  _claudectl.ps1  claudectl.bash  claudectl.elv  claudectl.fish
npm/: install.js  run.js  uninstall.js
scripts/: postinstall.js  preuninstall.js
src/: app.rs  claude-session.ts  cli.rs  cli.ts  completion.test.ts  completion.ts  error.rs  main.rs  output.test.ts  output.ts  process.rs  project_init.rs  tui.rs  tui.ts  types.ts  utils.ts
src/commands/: attach.ts  completions.rs  init.rs  init.test.ts  init.ts  list.rs  list.test.ts  list.ts  mod.rs  new.test.ts  new.ts  repair.rs  rm.rs  rm.test.ts  rm.ts  task.rs
src/components/: footer.rs  header.rs  mod.rs  projects_panel.rs  quick_actions.rs  sessions_panel.rs  stats_panel.rs  system_status.rs  workflow_panel.rs
src/components/modals/: confirmation.rs  file_picker.rs  mod.rs  (+4 more)
src/config/: mod.rs
src/data/: mod.rs
src/modules/: mod.rs
src/storage/: mod.rs
src/utils/: claude.rs  config.rs  config.test.ts  config.ts  directories.test.ts  directories.ts  errors.rs  errors.ts  fs.rs  git.rs  git.test.ts  git.ts  icons.rs  index.ts  initialization.test.ts  initialization.ts  logging.rs  mod.rs  naming.test.ts  naming.ts  output.rs  theme.rs  validation.rs
tests/: integration_tests.rs
tests/common/: mod.rs
tests/integration/: init.rs  list.rs  mod.rs  rm.rs  task.rs
(+11 files in other folders)
