[package]
name = "claudectl"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for managing Claude projects with git worktrees"
license = "MIT"
authors = ["Claude AI Assistant"]
repository = "https://github.com/example/claudectl"
keywords = ["cli", "git", "worktree", "workspace", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"