[package]
name = "claudectl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
owo-colors = { version = "4.0", features = ["supports-colors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.21.0"
