[package]
name = "claudectl"
version = "0.2.6"
edition = "2024"

[dependencies]
# CLI framework
clap = { version = "4.0", features = ["derive", "string"] }
clap_complete = "4.0"

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Platform-specific paths
directories = "5.0"

# Terminal output
owo-colors = { version = "4.0", features = ["supports-colors"] }
tabled = "0.20.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.21.0"

[build-dependencies]
clap = { version = "4.0", features = ["derive", "string"] }
clap_complete = "4.0"
